k8s/03-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-service
  namespace: tutor-app
spec:
  replicas: 1
  strategy:
    type: Recreate  
  selector:
    matchLabels:
      app: postgres-service
  template:
    metadata:
      labels:
        app: postgres-service
    spec:
      containers:
        - name: postgres
          image: ivinvaz/postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: tutor-app
spec:
  selector:
    app: postgres-service
  ports:
    - port: 5432
      targetPort: 5432
