k8s/04-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-service
  namespace: tutor-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis-service
  template:
    metadata:
      labels:
        app: redis-service
    spec:
      containers:
        - name: redis
          image: ivinvaz/redis:7-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: tutor-app
spec:
  selector:
    app: redis-service
  ports:
    - port: 6379
      targetPort: 6379
