k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # Monta o volume de dados
              mountPath: /var/lib/postgresql/data
            - name: postgres-secrets-volume # Monta o volume da senha
              mountPath: /etc/postgres-secrets
              readOnly: true
      volumes:
        - name: postgres-storage # Define o volume de dados usando o PVC
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: postgres-secrets-volume # Define o volume da senha
          secret:
            secretName: postgres-secret

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
